# bits-coq

./: .gitattributes  .gitignore  README.md  _CoqProject  bits-coq.opam  bits-rocq.opam  coq-bits.opam  coq_bits.opam  dune-project  flake.nix
.github/workflows/: ci.yml
extractions/: StackMachineExtraction.v  dune  stack_machine_test.ml
lib/: Compiler.v  Lexer.v  Parser.vy  Syntax.v  _CoqProject
lib/Cpdt/: StackMachine.v  dune
lib/Machine/: Compiler.v  dune
theories/: dune
theories/Cpdt/: Base.v  StackMachine.v
theories/Machine/: Compiler.v  Lexer.v  Parser.vy  dune
theories/Misc/: Goedel.v
